--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -30,7 +30,7 @@
 
     <licenses>
         <license>
-            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <name>GPLv3</name>
             <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
         </license>
     </licenses>
