--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -78,7 +78,7 @@
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <configuration>
-                    <header>${license.dir}/license-header.txt</header>
+                    <header>${license.dir}/source-header.txt</header>
                 </configuration>
             </plugin>
         </plugins>
