--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <url>http://cloudsimplus.org</url>
 
     <organization>
-        <name>Systems, Security and Image Communication Lab, Instituto de Telecomunicações (IT), Universidade da Beira Interior (UBI), Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
-        <url>http://www.it.pt/MSP-Cv http://www.it.pt http://www.ubi.pt http://www.ifto.edu.br</url>
+        <name>Systems, Security and Image Communication Lab, Instituto de Telecomunicações (IT) | Universidade da Beira Interior (UBI) | Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
+        <url>http://www.it.pt/MSP-Cv | http://www.it.pt | http://www.ubi.pt | http://www.ifto.edu.br</url>
     </organization>
 
     <licenses>
@@ -39,7 +39,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Directory where is the license file to be used by the com.mycila.maven-license-plugin -->
         <license.dir>${project.basedir}</license.dir>
     </properties>
 
@@ -126,7 +125,7 @@
                     <version>1.10.b1</version>
                     <inherited>false</inherited>
                     <configuration>
-                        <header>${license.dir}/license-header.txt</header>
+                        <header>${license.dir}/source-header.txt</header>
                         <aggregate>true</aggregate>
                         <properties>
                             <project>${project.name}</project>
