--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,41 @@
                         <includes>
                             <include>**/src/main/java/**/*.java</include>
                             <include>**/src/test/java/**/*.java</include>
+
+                            <!-- CloudSim Plus exclusive files that are inside CloudSim packages -->
+                            <include>**/src/main/java/**/CloudletSchedulerCompletelyFair.java</include>
+                            <include>**/src/main/java/**/VmAllocationPolicy.java</include>
+                            <include>**/src/main/java/**/PowerVmAllocationPolicy.java</include>
+                            <include>**/src/main/java/**/PowerVmAllocationPolicyMigration.java</include>
+                            <include>**/src/main/java/**/PowerVmAllocationPolicyMigrationDynamicUpperThreshold.java</include>
+                            <include>**/src/main/java/**/VmAllocationPolicyMigrationWorstFitStaticThreshold.java</include>
+                            <include>**/src/main/java/**/DatacenterBroker.java</include>
+                            <include>**/src/main/java/**/DatacenterBroker.java</include>
+                            <include>**/src/main/java/**/Cloudlet.java</include>
+                            <include>**/src/main/java/**/Simulation.java</include>
+                            <include>**/src/main/java/**/SimEntity.java</include>
+                            <include>**/src/main/java/**/SimEvent.java</include>
+                            <include>**/src/main/java/**/EventQueue.java</include>
+                            <include>**/src/main/java/**/Identificable.java</include>
+                            <include>**/src/main/java/**/Nameable.java</include>
+                            <include>**/src/main/java/**/Datacenter.java</include>
+                            <include>**/src/main/java/**/DatacenterCharacteristics.java</include>
+                            <include>**/src/main/java/**/Host.java</include>
+                            <include>**/src/main/java/**/PowerHost.java</include>
+                            <include>**/src/main/java/**/HostDynamicWorkload.java</include>
+                            <include>**/src/main/java/**/NetworkTopology.java</include>
+                            <include>**/src/main/java/**/ResourceManageable.java</include>
+                            <include>**/src/main/java/**/ResourceCapacity.java</include>
+                            <include>**/src/main/java/**/Resource.java</include>
+                            <include>**/src/main/java/**/RawStorage.java</include>
+                            <include>**/src/main/java/**/Ram.java</include>
+                            <include>**/src/main/java/**/Bandwidth.java</include>
+                            <include>**/src/main/java/**/Processor.java</include>
+                            <include>**/src/main/java/**/Pe.java</include>
+                            <include>**/src/main/java/**/VmScheduler.java</include>
+                            <include>**/src/main/java/**/CloudletScheduler.java</include>
+                            <include>**/src/main/java/**/UtilizationModelArithmeticProgression.java</include>
+                            <include>**/src/main/java/**/Vm.java</include>
                         </includes>
                         <excludes>
                             <exclude>**/package-info.java</exclude>
