--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -84,7 +84,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <!-- Switch OFF the doclint in Java 8 -->
+                            <!-- AbstractSwitch OFF the doclint in Java 8 -->
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </plugin>
@@ -133,7 +133,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <!-- Switch OFF the doclint in Java 8 -->
+                            <!-- AbstractSwitch OFF the doclint in Java 8 -->
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </plugin>
