--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javac.target>1.8</javac.target>
         <license.dir>${project.basedir}</license.dir>
     </properties>
 
@@ -47,7 +48,6 @@
         <module>cloudsim-plus-examples</module>
 		<module>cloudsim-plus-benchmarks</module>
 		<module>cloudsim-plus-testbeds</module>
-        <module>distribution</module>
     </modules>
 
     <build>
@@ -58,8 +58,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.6.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${javac.target}</source>
+                        <target>${javac.target}</target>
                     </configuration>
                 </plugin>
 
@@ -101,8 +101,11 @@
                     <artifactId>versioneye-maven-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <!-- ID of the project at http://versioneye.com -->
-                        <projectId>5841f4dfb1c38c0aa1cd46f1</projectId>
+                        <organisation>manoelcampos</organisation>
+                        <projectId>586aa06341aba10015ec8099</projectId>
+                        <updatePropertiesAfterCreate>false</updatePropertiesAfterCreate>
+                        <mergeAfterCreate>true</mergeAfterCreate>
+                        <licenseCheckBreakByUnknown>false</licenseCheckBreakByUnknown>
                     </configuration>
                     <!--
                     The plugin is just being executed when the repository is pushed to travis-ci.org
@@ -243,11 +246,6 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>cloudsim-plus-examples</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>distribution</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
