--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -84,7 +84,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <!-- AbstractSwitch OFF the doclint in Java 8 -->
+                            <!-- Switch OFF the doclint in Java 8 -->
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </plugin>
@@ -140,7 +140,6 @@
                 </plugins>
             </build>
         </profile>
-
     </profiles>
 
     <build>
