--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <packaging>pom</packaging>
 
     <name>CloudSim Plus Modules: API, Examples, Testbeds, Benchmarks</name>
-    <description>CloudSim++ A CloudSim fork for Modeling and Simulation of Cloud Computing Infrastructures and Services that focuses on reusability principles and other ones such as DRY, KISS, SOLID and Design Patterns</description>
+    <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 8 Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
     <url>http://cloudsimplus.org</url>
 
     <organization>
-        <name>Systems, Security and Image Communication Lab, Instituto de Telecomunicações (IT) | Universidade da Beira Interior (UBI) | Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
-        <url>http://www.it.pt/MSP-Cv | http://www.it.pt | http://www.ubi.pt | http://www.ifto.edu.br</url>
+        <name>Systems, Security and Image Communication Lab - Instituto de Telecomunicações (IT) - Universidade da Beira Interior (UBI) - Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
+        <url>http://www.it.pt/MSP-Cv http://www.it.pt http://www.ubi.pt http://www.ifto.edu.br</url>
     </organization>
 
     <licenses>
@@ -29,6 +29,12 @@
             <organization>Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</organization>
             <organizationUrl>http://www.ifto.edu.br</organizationUrl>
         </developer>
+        <developer>
+            <name>Raysa Oliveira</name>
+            <email>oliveira.raysa@gmail.com</email>
+            <organization>Universidade da Beira Interior (UBI)</organization>
+            <organizationUrl>http://www.ubi.pt</organizationUrl>
+        </developer>
     </developers>
 
     <scm>
@@ -36,6 +42,11 @@
         <developerConnection>scm:git:git@github.com:manoelcampos/cloudsim-plus.git</developerConnection>
         <url>git@github.com:manoelcampos/cloudsim-plus.git</url>
     </scm>
+
+    <issueManagement>
+        <url>http://github.com/manoelcampos/cloudsim-plus/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -218,14 +229,6 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>localrepo</id>
-            <name>LocalRepository</name>
-            <url>file:///${project.build.directory}/deployment-artifacts</url>
-        </repository>
-    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
