--- a/docs/Makefile
+++ b/docs/Makefile
@@ -20,4 +20,4 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 javadoc:
-	javasphinx-apidoc -f -t "Packages Javadoc" -o . ../cloudsim-plus/src/main/java/
+	javasphinx-apidoc -f -t "Javadocs" -o . ../cloudsim-plus/src/main/java/
