--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -171,6 +171,8 @@ THE POSSIBILITY OF SUCH DAMAGE.
                 <version>1.10.b1</version>
                 <configuration>
                     <header>${license.dir}/source-header.txt</header>
+                    <strictCheck>true</strictCheck>
+                    <failIfMissing>false</failIfMissing>
                 </configuration>
             </plugin>
         </plugins>
