--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -106,6 +106,8 @@
                 <version>1.10.b1</version>
                 <configuration>
                     <header>${license.dir}/source-header.txt</header>
+                    <strictCheck>true</strictCheck>
+                    <failIfMissing>false</failIfMissing>
                 </configuration>
             </plugin>
         </plugins>
