--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ script: mvn clean package
 after_success:
   - mvn clean test -Dintegration-tests=true jacoco:report
   - mvn versioneye:update 
+cache:
+  directories:
+  - $HOME/.m2
 jdk:
   - oraclejdk8 
 
