--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.cloudsimplus</groupId>
     <artifactId>cloudsim-plus</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <name>CloudSim Plus API</name>
     <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 8 Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
     <url>http://cloudsimplus.org</url>
@@ -380,9 +380,13 @@
                         <include>**/src/main/java/**/RawStorage.java</include>
                         <include>**/src/main/java/**/Bandwidth.java</include>
                         <include>**/src/main/java/**/Ram.java</include>
+                        <include>**/src/main/java/**/RawStorageManageable.java</include>
+                        <include>**/src/main/java/**/BandwidthManageable.java</include>
+                        <include>**/src/main/java/**/RamManageable.java</include>
                         <include>**/src/main/java/**/Nameable.java</include>
                         <include>**/src/main/java/**/CloudletSchedulerCompletelyFair.java</include>
                         <include>**/src/main/java/**/UtilizationModelArithmeticProgression.java</include>
+                        <include>**/src/main/java/**/Resourceful.java</include>
                     </includes>
 
                     <excludes>
