--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install: mvn clean install -B -V -Dintegration-tests=true -pl cloudsim-plus,clou
 script: mvn clean package
 after_success:
   - mvn clean test -Dintegration-tests=true jacoco:report
-  - mvn versioneye:update 
+  - cd cloudsim-plus && mvn versioneye:update 
 cache:
   directories:
   - $HOME/.m2
