--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -105,7 +105,7 @@
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.10.b1</version>
                 <configuration>
-                    <header>${license.dir}/source-header.txt</header>
+                    <header>${license.dir}/COPYRIGHT</header>
                     <strictCheck>true</strictCheck>
                     <failIfMissing>false</failIfMissing>
                 </configuration>
