--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
-#File used by the python pip tool to install dependencies
+#File used by pip, a python command line tool, to install dependencies
+#https://pip.pypa.io
 javasphinx
